# jsonCPP

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTORS.txt  LICENSE.txt  README.md  TODO.md
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  discussion.md  feature.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  main.cpp
examples/data/: dummy.json
examples/end-to-end/: main.cpp
examples/end-to-end/data/: dummy.json
include/json/: json.h
include/json/common/datatypes/: JTypes.h  TTypes.h  Types.h
include/json/common/dataunits/: Token.h  Value.h
include/json/libvars/: Extension.h  Version.h
include/json/parsers/: Parser.h
include/json/utils/: Utils.h
json/: CMakeLists.txt
json/include/: json.h
json/include/Base/: Parser.h  Token.h  Value.h
json/include/Utils/: Utils.h
json/include/Utils/DataTypes/: JTypes.h  TTypes.h  Types.h
json/src/Base/: Parser.cpp  Value.cpp
json/src/Utils/: Utils.cpp
prerequisites/catch/: catch.hpp
src/: CMakeLists.txt
src/common/dataunits/: Value.cpp
src/parsers/: Parser.cpp
src/utils/: Utils.cpp
tests/: CMakeLists.txt  test_main.cpp
